unpackaged/main/default/objects/Case/fields/AI_Confidence_Level__c.field-meta.xml
<CustomField>
    <fullName>AI_Confidence_Level__c</fullName>
    <label>AI Confidence Level</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>