unpackaged/main/default/objects/Case/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Queue__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounts Receivable (AR) Collections</fullName>
            </value>
            <value>
                <fullName>Amazon</fullName>
            </value>
            <value>
                <fullName>Customer Invoice Issuance or Adjustments</fullName>
            </value>
            <value>
                <fullName>Corporate credit card receipts</fullName>
            </value>
            <value>
                <fullName>Credit Card Payment Required</fullName>
            </value>
            <value>
                <fullName>Deal Registration</fullName>
            </value>
            <value>
                <fullName>Expense and Payment Recordkeeping</fullName>
            </value>
            <value>
                <fullName>Customer Payment Remittances</fullName>
            </value>
            <value>
                <fullName>Miscellaneous</fullName>
            </value>
            <value>
                <fullName>Misrouted Requests and Escalations</fullName>
            </value>
            <value>
                <fullName>Order Updates</fullName>
            </value>
            <value>
                <fullName>Overhead Invoice and Credit Memo Management</fullName>
            </value>
            <value>
                <fullName>Payment Issuance Confirmation</fullName>
            </value>
            <value>
                <fullName>Customer Payment Queries</fullName>
            </value>
            <value>
                <fullName>Purchase Order Management</fullName>
            </value>
            <value>
                <fullName>Sales and use tax related</fullName>
            </value>
            <value>
                <fullName>Shipment Confirmation Management</fullName>
            </value>
            <value>
                <fullName>Supplier Invoice and Credit Memo Management</fullName>
            </value>
            <value>
                <fullName>Supplier Payment Inquiries</fullName>
            </value>
            <value>
                <fullName>Supplier Set Ups &amp; Updates</fullName>
            </value>
            <value>
                <fullName>Tax Exempt Forms</fullName>
            </value>
            <value>
                <fullName>Unable to Categorize</fullName>
            </value>
            <value>
                <fullName>Vendor Account Reconciliation</fullName>
            </value>
            <value>
                <fullName>Bill Only Order Needed</fullName>
            </value>
            <value>
                <fullName>RMA Needed</fullName>
            </value>
            <value>
                <fullName>Supplier Pricing Issue</fullName>
            </value>
            <value>
                <fullName>Remittance Advice Management</fullName>
                <isActive>false</isActive>
                <label>Remittance Advice Management</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>