unpackaged/main/default/objects/Case/fields/Category_Reason__c.field-meta.xml
<CustomField>
    <fullName>Category_Reason__c</fullName>
    <label>Category Reason</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>