unpackaged/main/default/objects/Case/fields/Email_Alias__c.field-meta.xml
<CustomField>
    <fullName>Email_Alias__c</fullName>
    <label>Email Alias</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accounting</fullName>
            </value>
            <value>
                <fullName>AccountingCanada</fullName>
            </value>
            <value>
                <fullName>Invoices</fullName>
            </value>
            <value>
                <fullName>InvoicesCanada</fullName>
            </value>
            <value>
                <fullName>Operations</fullName>
            </value>
            <value>
                <fullName>OperationsCanada</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>