unpackaged/main/default/objects/Case/fields/Email_Body__c.field-meta.xml
<CustomField>
    <fullName>Email_Body__c</fullName>
    <label>Email Body</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>