unpackaged/main/default/objects/Case/fields/Email_cc__c.field-meta.xml
<CustomField>
    <fullName>Email_cc__c</fullName>
    <label>Email cc</label>
    <length>255</length>
    <type>Text</type>
</CustomField>