unpackaged/main/default/objects/Case/fields/Email_From__c.field-meta.xml
<CustomField>
    <fullName>Email_From__c</fullName>
    <label>Email From</label>
    <type>Email</type>
</CustomField>