unpackaged/main/default/objects/Case/fields/Email_To__c.field-meta.xml
<CustomField>
    <fullName>Email_To__c</fullName>
    <label>Email To</label>
    <type>TextArea</type>
</CustomField>