unpackaged/main/default/objects/Case/fields/Flag__c.field-meta.xml
<CustomField>
    <fullName>Flag__c</fullName>
    <formula>IF(
    ABS((CreatedDate - LastModifiedDate) * 1440) &lt;= 3,
    IMAGE(&quot;/resource/dotBlack&quot;, &quot;Black Icon&quot;), /* CreatedDate and LastModifiedDate are within 3 minutes */
    CASE(
        FLOOR(TODAY() - DATEVALUE(LastModifiedDate)),
        0, IMAGE(&quot;/resource/dotGreen&quot;, &quot;Green Icon&quot;), /* Modified today */
        1, IMAGE(&quot;/resource/dotYellow&quot;, &quot;Yellow Icon&quot;), /* Modified yesterday */
        IMAGE(&quot;/resource/dotRed&quot;, &quot;Red Icon&quot;) /* Modified two or more days ago */
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Flag</label>
    <type>Text</type>
</CustomField>