unpackaged/main/default/objects/Case/fields/Invoice_Posted_to_QuickBooks__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Posted_to_QuickBooks__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Posted to QuickBooks</label>
    <type>Checkbox</type>
</CustomField>