unpackaged/main/default/objects/Case/fields/Invoice_Sent_to_Customer__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Sent_to_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Invoice Sent to Customer</label>
    <type>Checkbox</type>
</CustomField>