unpackaged/main/default/objects/Case/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unknown</fullName>
            </value>
            <value>
                <fullName>Multiple</fullName>
            </value>
            <value>
                <fullName>Accounting CA</fullName>
            </value>
            <value>
                <fullName>Accounting US</fullName>
            </value>
            <value>
                <fullName>Invoices CA</fullName>
            </value>
            <value>
                <fullName>Invoices US</fullName>
            </value>
            <value>
                <fullName>Operations CA</fullName>
            </value>
            <value>
                <fullName>Operations US</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>