unpackaged/main/default/objects/Case/fields/Thread_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Thread_Identifier__c</fullName>
    <label>Thread Identifier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>