unpackaged/main/default/objects/Case/fields/Varcom_Only_Supplier_Invoice__c.field-meta.xml
<CustomField>
    <fullName>Varcom_Only_Supplier_Invoice__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Varcom Only Supplier Invoice</label>
    <type>Checkbox</type>
</CustomField>