unpackaged/main/default/objects/Case/listViews/Accounts_Payable_Case.listView-meta.xml
<ListView>
    <fullName>Accounts_Payable_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Accounts Payable</label>
    <queue>Accounts_Payable</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>