unpackaged/main/default/objects/Case/listViews/All_Supplier_Invoice_and_Credit_Memo_Mgt.listView-meta.xml
<ListView>
    <fullName>All_Supplier_Invoice_and_Credit_Memo_Mgt</fullName>
    <columns>Flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Queue__c</columns>
    <columns>Category__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <columns>Email_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Supplier Invoice and Credit Memo Management</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>3/4/2025 12:00 AM</value>
    </filters>
    <filters>
        <field>Varcom_Only_Supplier_Invoice__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Supplier Invoice and Credit Memo Mgt</label>
</ListView>