unpackaged/main/default/objects/Case/listViews/Inbound_Email_Case.listView-meta.xml
<ListView>
    <fullName>Inbound_Email_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>Inbound Email</label>
    <queue>Inbound_Email</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>