unpackaged/main/default/objects/Case/listViews/Open_Accounting_AP_CA.listView-meta.xml
<ListView>
    <fullName>Open_Accounting_AP_CA</fullName>
    <columns>Flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Queue__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Email_From__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Queue__c</field>
        <operation>equals</operation>
        <value>Accounting CA</value>
    </filters>
    <filters>
        <field>CASES.CREATED_DATE</field>
        <operation>greaterOrEqual</operation>
        <value>5/8/2025 1:00 AM</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Supplier Invoice and Credit Memo Management</value>
    </filters>
    <label>Open - Accounting - AP CA</label>
</ListView>