unpackaged/main/default/objects/Case/listViews/Open_Accounting_COGS_AP_US.listView-meta.xml
<ListView>
    <fullName>Open_Accounting_COGS_AP_US</fullName>
    <columns>Flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Queue__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Email_From__c</columns>
    <columns>CASES.LAST_UPDATE_DATE_ONLY</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Queue__c</field>
        <operation>equals</operation>
        <value>Accounting US</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Supplier Account Payable</value>
    </filters>
    <label>Open - Accounting - COGS - AP US</label>
</ListView>