unpackaged/main/default/objects/Case/listViews/Open_All_Accounting_Unassigned.listView-meta.xml
<ListView>
    <fullName>Open_All_Accounting_Unassigned</fullName>
    <booleanFilter>1 AND (2 OR 3 OR 5) AND 4</booleanFilter>
    <columns>Flag__c</columns>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>Queue__c</columns>
    <columns>Category__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Email_From__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>Queue__c</field>
        <operation>equals</operation>
        <value>,Unknown,Multiple</value>
    </filters>
    <filters>
        <field>Category__c</field>
        <operation>equals</operation>
        <value>Unable to Categorize</value>
    </filters>
    <filters>
        <field>Queue__c</field>
        <operation>notEqual</operation>
        <value>Operations CA,Operations US</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Inbound Email</value>
    </filters>
    <label>Open - All Accounting Unassigned</label>
</ListView>